cambia color del nombre

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     <section class="sidebar_information">
       <div class="sidebar_userimage">
          <!-- 1º Commit Tu nombre y foto -->
-        <img src="images/git.jpg">
-        <h1 class="sidebar_information_title">
+        <img src="https://scontent.fbog14-1.fna.fbcdn.net/v/t1.0-9/98021900_139804174326313_2693314660643373056_n.jpg?_nc_cat=111&ccb=2&_nc_sid=09cbfe&_nc_ohc=QLa0Ig9x930AX-fFApX&_nc_ht=scontent.fbog14-1.fna&oh=5e0d8a96d101b7db46b9aa7c75265882&oe=5FCA5289">
+        <h1 class="David Alejandro Gonzalez">
           Escribe tu nombre
         </h1>
       </div>
       <div class="comunidad-autoria">
         <div class="nombre">
           <!-- 2º Commit - Tu perfil Web -->
-          <p>Escribe tu perfil web</p>
+          <p>Programador de paginas web</p>
         </div>
       </div>
     </section>
