Adiciona descripcion y redes sociales

--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
       </div>
       <div class="comunidad-autoria">
         <div class="nombre">
-          <!-- 2º Commit - Tu perfil Web -->
-          <p>Escribe tu perfil web</p>
+          <p>Ingeniero en sistemas</p>
         </div>
       </div>
     </section>
     <ul>
       <li>
-        <a href="#" target="_blank">
+        <a href="https://www.facebook.com/profile.php?id=100048901926911" target="_blank">
           <!-- 3º Commit - Redes Sociales -->
           <p>Facebook</p>
         </a>
@@ -55,7 +54,7 @@
         </a>
       </li>
       <li>
-        <a href="#" target="_blank">
+        <a href="https://github.com/dagonc/Udb.git" target="_blank">
           <p>GitHub</p>
         </a>
       </li>
@@ -66,7 +65,7 @@
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido</h3>
-      <p>Tu descripción</p>
+      <p>Soy estudiante de ingenieria en sistemas en la universidad de boyacá</p>
     </div>
 
     <div class="bloque">
