Cambio de nombre

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <!-- 1º Commit Tu nombre y foto -->
         <img src="images/git.jpg">
         <h1 class="sidebar_information_title">
-          Escribe tu nombre
+          David Alejadnro Gonzalez Cepeda
         </h1>
       </div>
       <div class="comunidad-autoria">
